--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "credit-card-tokenization-api",
   "version": "1.0.0",
-  "description": "API permitira gestionar tarjetas de crédito tokenizados",
+  "description": "API permitirá gestionar tarjetas de crédito tokenizados",
   "main": "app.ts",
   "scripts": {
     "dev": "nodemon app.ts",
     "start": "node app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "keywords": [
     "node.js",
@@ -42,8 +43,11 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/http-status-codes": "^1.2.0",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/redis": "^4.0.11",
-    "@types/uuid": "^9.0.8"
+    "@types/uuid": "^9.0.8",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2"
   }
 }
