--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon app.ts",
     "start": "node app.ts",
+    "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watchAll"
   },
