--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
     "compilerOptions": {
       "target": "es6",
       "module": "commonjs",
+      "rootDir": "./",
+      "outDir": "./build",
       "esModuleInterop": true,
       "strict": true,
-    }
+    },
+    "include": ["**/*.ts"],
   }
